# GethDB

./: .gitignore  Cargo.toml  Dockerfile  METRICS.md  README.md  flake.nix
.config/: nextest.toml
.github/scripts/: setup.ps1
.github/workflows/: deploy.yml  pr.yml
.run/: clippy.run.xml
geth-client/: Cargo.toml  build.rs
geth-client-tests/: Cargo.toml
geth-client-tests/src/: append_read_tests.rs  delete_tests.rs  lib.rs  program_tests.rs
geth-client-tests/src/resources/programs/: echo.pyro
geth-client/src/: generated.rs  grpc.rs  lib.rs
geth-client/src/next/: driver.rs  grpc.rs  mod.rs
geth-common/: Cargo.toml  build.rs
geth-common/src/: client.rs  io.rs  lib.rs
geth-consensus/: Cargo.toml
geth-consensus/src/: entry.rs  lib.rs  msg.rs  state_machine.rs  tests.rs
geth-consensus/src/tests/: sm.rs  storage.rs
geth-domain/: Cargo.toml  build.rs  schema.fbs
geth-domain/protos/: events.proto
geth-domain/src/: append_propose.rs  binary.rs  commands_generated.rs  events.fbs  events_generated.rs  lib.rs  schema.fbs  schema_generated.rs  tf_log.rs
geth-domain/src/index/: block.rs  lsm.rs  mem_table.rs  merge.rs  mod.rs  ss_table.rs
geth-domain/src/index/block/: immutable.rs  mod.rs  mutable.rs
geth-domain/src/index/tests/: mod.rs
geth-domain/src/index/tests/fs/: lsm.rs  merge_io.rs  ss_table.rs
geth-domain/src/index/tests/in_mem/: block.rs  lsm.rs  mem_table.rs  mod.rs  ss_table.rs
geth-domain/src/iter/: events.rs
geth-engine/: Cargo.toml  build.rs
geth-engine/src/: bus.rs  lib.rs  messages.rs  metrics.rs  names.rs  options.rs  process.rs
geth-engine/src/domain/: index.rs
geth-engine/src/grpc/: mod.rs  protocol.rs
geth-engine/src/process/: consumer.rs  echo.rs  env.rs  messages.rs  panic.rs  resource.rs  sink.rs  write_request_manager.rs
geth-engine/src/process/grpc/: local.rs  mod.rs  protocol.rs
geth-engine/src/process/indexing/: chaser.rs  client.rs  mod.rs  proc.rs
geth-engine/src/process/manager/: catalog.rs  client.rs  mod.rs  proc.rs  spawn.rs
geth-engine/src/process/query/: eval.rs  mod.rs  proc.rs  requirements.rs  stream.rs
geth-engine/src/process/reading/: client.rs  mod.rs  proc.rs
geth-engine/src/process/storage/: mod.rs  reader.rs  writer.rs
geth-engine/src/process/subscription/: client.rs  mod.rs  proc.rs
geth-engine/src/process/subscription/program/: client.rs  mod.rs
geth-engine/src/process/subscription/program/pyro/: mod.rs  worker.rs
geth-engine/src/process/subscription/pyro/: mod.rs
geth-engine/src/process/subscriptions/: mod.rs  programmable.rs
geth-engine/src/process/tests/: indexing.rs  interactions.rs  mod.rs  programs.rs  reading.rs  subscribing.rs  writing.rs
geth-engine/src/process/writing/: client.rs  entries.rs  mod.rs  proc.rs
geth-engine/src/services/: index.rs  mod.rs
geth-eventql/: Cargo.toml
geth-eventql/src/: codegen.rs  error.rs  eval.rs  infer.rs  lib.rs  linearization.rs  macros.rs  rename.rs  sym.rs
geth-eventql/src/parser/: ast.rs  mod.rs  state.rs
geth-eventql/src/tests/: infer_tests.rs  mod.rs  parser_tests.rs  rename_tests.rs
geth-grpc/: Cargo.toml  build.rs
geth-grpc/src/: lib.rs
geth-mikoshi/: Cargo.toml
geth-mikoshi/src/: constants.rs  domain.rs  hashing.rs  lib.rs  manager.rs  marshalling.rs  storage.rs  types.rs  utils.rs
geth-mikoshi/src/backend/: in_memory.rs  mod.rs
geth-mikoshi/src/backend/esdb/: index.rs  manager.rs  mod.rs  parsing.rs  types.rs  utils.rs
geth-mikoshi/src/backend/esdb/synchronous/: blocking_backend.rs  fs.rs  mod.rs
geth-mikoshi/src/backend/esdb/synchronous/index/: entry.rs  map.rs  mem_table.rs  mod.rs
geth-mikoshi/src/backend/esdb/synchronous/query/: full_scan.rs  mod.rs
geth-mikoshi/src/index/: block.rs  lsm.rs  mem_table.rs  merge.rs  mod.rs  ss_table.rs
geth-mikoshi/src/index/rannoch/: block.rs  in_mem.rs  lsm.rs  mem_table.rs  merge.rs  mod.rs  ss_table.rs  storage.rs
geth-mikoshi/src/index/rannoch/block/: tests.rs
geth-mikoshi/src/index/rannoch/mem_table/: tests.rs
geth-mikoshi/src/index/rannoch/merge/: tests.rs
geth-mikoshi/src/index/rannoch/ss_table/: tests.rs
geth-mikoshi/src/index/rannoch/storage/: fs.rs  in_mem.rs
geth-mikoshi/src/index/rannoch/tests/: block.rs  lsm.rs  mem_table.rs  merge.rs  mod.rs  ss_table.rs
geth-mikoshi/src/index/rannoch/tests/fs/: lsm.rs  merge_io.rs  mod.rs  ss_table.rs
geth-mikoshi/src/index/rannoch/tests/in_mem/: block.rs  lsm.rs  mem_table.rs  merge.rs  ss_table.rs
geth-mikoshi/src/index/tests/: mod.rs
geth-mikoshi/src/index/tests/fs/: lsm.rs  merge_io.rs  mod.rs  ss_table.rs
geth-mikoshi/src/index/tests/in_mem/: block.rs  lsm.rs  mem_table.rs  merge.rs  mod.rs  ss_table.rs
geth-mikoshi/src/storage/: fs.rs  in_mem.rs
geth-mikoshi/src/wal/: chunk.rs  data_events.rs  entries.rs  footer.rs  header.rs  log_reader.rs  log_writer.rs  manager.rs  mod.rs  parsing.rs  record.rs  records.rs
geth-mikoshi/src/wal/chunks/: chunk.rs  footer.rs  header.rs  manager.rs  mod.rs  tests.rs
geth-mikoshi/src/wal/chunks/manager/: prepare_logs.rs
geth-mikoshi/src/wal/manager/: prepare_logs.rs
geth-mikoshi/src/wal/tests/: manager.rs  mod.rs  records.rs
geth-node/: Cargo.toml  build.rs
geth-node/src/: bus.rs  main.rs  messages.rs  names.rs  process.rs  types.rs
geth-node/src/grpc/: mod.rs  protocol.rs  streams.rs
geth-node/src/process/: storage.rs
geth-node/src/process/storage/: index.rs  mod.rs  reader.rs  service.rs  writer.rs
geth-node/src/process/storage/service/: current.rs  index.rs  reader.rs  writer.rs
geth-node/src/process/subscriptions/: mod.rs  programmable.rs
geth-node/src/services/: index.rs  mod.rs
geth-quickstart/: Cargo.toml
geth-quickstart/src/: main.rs
geth-repl/: Cargo.toml
geth-repl/src/: cli.rs  header.txt  local.rs  main.rs  utils.rs
k8s/manifests/: 01-namespace.yaml  02-gethdb-deployment.yaml  03-seq-deployment.yaml  04-otel-collector-deployment.yaml  05-prometheus-deployment.yaml  06-grafana-deployment.yaml  06-grafana-kustomization.yaml  kustomization.yaml
protos/: protocol.proto  streams.proto
(+16 files in other folders)
