[package]
name = "geth-client-tests"
version = "0.1.0"
edition = "2021"

[dependencies.geth-client]
path = "../geth-client"

[dependencies.geth-engine]
path = "../geth-engine"

[dependencies.geth-common]
path = "../geth-common"

[dependencies.tokio]
version = "*"
features = ["full"]

[dependencies.fake]
version = "2.9"
features = ["derive"]

[dependencies]
temp-dir = "0.1"
eyre = "0.6"
uuid = "*"
serde = "1"
serde_json = "1"
futures = "0.3"
