[package]
name = "geth-client-tests"
version = "0.1.0"
edition = "2021"

[dependencies.geth-client]
path = "../geth-client"

[dependencies.geth-engine]
path = "../geth-engine"

[dependencies.geth-common]
path = "../geth-common"

[dependencies.tokio]
version = "*"
features = ["full"]

[dependencies.fake]
version = "2.9"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies]
temp-dir = "0.1"
eyre = "0.6"
uuid = "*"
serde = "1"
serde_json = "1"
futures = "0.3"
bytes = "*"
ctor = "0.2"
tracing = "0.1"
tracing-opentelemetry = "0.31"
opentelemetry-otlp = "0.30"
opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-appender-log = "0.30"
opentelemetry-appender-tracing = "0.30"

