[package]
name = "geth-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.geth-common]
path = "../geth-common"

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies]
tokio = "1.20"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
prost-derive = "0.12"
byteorder = "1"
eyre = "0.6"
futures-util = "0.3"
chrono = "0.4"
tracing = "0.1.37"
async-stream = "0.3.5"
async-trait = "0.1.71"

[build-dependencies]
tonic-build = "0.10"
