[package]
name = "geth-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.geth-common]
path = "../geth-common"

[dependencies.geth-engine]
path = "../geth-engine"

[dependencies]
tokio = "1.20"
tonic = "0.10"
eyre = "0.6"
futures-util = "0.3"
tracing = "0.1.37"
async-trait = "0.1.71"
