[package]
name = "geth-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies]
tonic = "0.10"
prost = "0.12"
bytes = "1"
thiserror = "1"
chrono = "0.4"
eyre = "0.6"
async-trait = "0.1.71"
serde_json = "1"
serde = "1"

[build-dependencies]
tonic-build = "0.10"
