[package]
name = "geth-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies]
bytes = "1"
thiserror = "1"
chrono = "0.4"
eyre = "0.6"
serde_json = "1"
serde = "1"