[package]
name = "geth-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flatbuffers = "23.5.26"

[dependencies.geth-mikoshi]
path = "../geth-mikoshi"

[dependencies.geth-consensus]
path = "../geth-consensus"

