[package]
name = "geth-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1"
prost = "0.12"
eyre = "0.6.12"
chrono = "0.4"

[dependencies.uuid]
features = ["v4"]
version = "*"

[dependencies.geth-mikoshi]
path = "../geth-mikoshi"

[dependencies.geth-common]
path = "../geth-common"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
temp_testdir = "0.2"
