[package]
name = "geth-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.geth-mikoshi]
path = "../geth-mikoshi"

[dependencies.geth-common]
path = "../geth-common"

[dependencies.geth-domain]
path = "../geth-domain"

[dependencies.tokio]
version = "1.20"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.pyro-core]
git = "https://github.com/YoEight/pyro.git"

[dependencies.pyro-runtime]
git = "https://github.com/YoEight/pyro.git"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies]
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
prost-derive = "0.12"
tracing = "0.1"
futures = "*"
bytes = "1"
eyre = "0.6"
async-stream = "0.3"
byteorder = "1"
chrono = "0.4"
serde_json = "1"
moka = "0.11"
flatbuffers = "23.5.26"
async-trait = "0.1.71"

[build-dependencies]
tonic-build = "0.10"
