[package]
name = "geth-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.geth-mikoshi]
path = "../geth-mikoshi"

[dependencies.geth-common]
path = "../geth-common"

[dependencies.geth-domain]
path = "../geth-domain"

[dependencies.tokio]
version = "1.20"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.pyro-core]
git = "https://github.com/YoEight/pyro.git"

[dependencies.pyro-runtime]
git = "https://github.com/YoEight/pyro.git"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies]
tonic = "0.10"
prost = "0.12"
tracing = "0.1"
tracing-opentelemetry = "0.31"
opentelemetry-otlp = "0.30"
opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-appender-log = "0.30"
tracing-subscriber = "0.3"
futures = "*"
bytes = "1"
eyre = "0.6"
async-stream = "0.3"
chrono = "0.4"
serde_json = "1"
moka = "0.11"
async-trait = "0.1.71"
serde = { version = "1", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
ctor = "0.2"
lazy_static = "1.4.0"
bb8 = "0.9"

[build-dependencies]
tonic-build = "0.10"
