[package]
name = "geth-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.geth-mikoshi]
path = "../geth-mikoshi"

[dependencies.geth-common]
path = "../geth-common"

[dependencies.geth-domain]
path = "../geth-domain"

[dependencies.tokio]
version = "1.20"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.pyro-core]
git = "https://github.com/YoEight/pyro.git"

[dependencies.pyro-runtime]
git = "https://github.com/YoEight/pyro.git"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.opentelemetry-otlp]
version = "0.30"
features = ["trace", "logs", "grpc-tonic"]

[dependencies]
tonic = "0.10"
tracing = "0.1"
tracing-opentelemetry = "0.31"
opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-appender-tracing = "0.30"

bytes = "1"
eyre = "0.6"
chrono = "0.4"
serde_json = "1"
moka = "0.11"
async-trait = "0.1.71"
serde = { version = "1", features = ["derive"] }
ctor = "0.2"
base64 = "0.22"

[build-dependencies]
built = { version = "0.8", features = ["git2"] }
