[package]
name = "geth-grpc"
version = "0.1.0"
edition = "2024"

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.geth-common]
path = "../geth-common"

[dependencies]
tonic = "0.10"
prost = "0.12"
bytes = "1"
thiserror = "1"
chrono = "0.4"
eyre = "0.6"
async-trait = "0.1.71"
serde_json = "1"
serde = "1"

[build-dependencies]
tonic-build = "0.10"
