[package]
name = "geth-grpc"
version = "0.1.0"
edition = "2024"

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.geth-common]
path = "../geth-common"

[dependencies]
tonic = "0.13"
prost = "0.13"
bytes = "1"
chrono = "0.4"
async-trait = "0.1.71"

[build-dependencies]
tonic-build = "0.13"
