[package]
name = "geth-mikoshi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.geth-common]
path = "../geth-common"

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies]
bytes = "1"
eyre = "0.6"
tracing = "*"
bitflags = "1.3"
byteorder = "1.4"
serde_json = "1"
nom = "6"
md-5 = "0.10"
async-trait = "0.1"
sha2 = "0.10"

[dev-dependencies]
temp_testdir = "0.2"