[package]
name = "geth-mikoshi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.geth-common]
path = "../geth-common"

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies]
bytes = "1"
eyre = "0.6"
bitflags = "1.3"
nom = "7"
sha2 = "0.10"