[package]
name = "geth-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.20"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies]
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
prost-derive = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "*"

[build-dependencies]
tonic-build = "0.8"
