[package]
name = "geth-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.geth-mikoshi]
path = "../geth-mikoshi"

[dependencies.geth-common]
path = "../geth-common"

[dependencies.tokio]
version = "1.20"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.pyro-core]
git = "https://github.com/YoEight/pyro.git"

[dependencies.pyro-runtime]
git = "https://github.com/YoEight/pyro.git"

[dependencies]
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
prost-derive = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "*"
bytes = "1"
eyre = "0.6"
async-stream = "0.3"
byteorder = "1"
chrono = "0.4"
serde_json = "1"

[build-dependencies]
tonic-build = "0.9"
