[package]
name = "geth-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.glyph]
git = "https://github.com/YoEight/glyph.git"
branch = "master"

[dependencies.geth-client]
path = "../geth-client"

[dependencies.geth-common]
path = "../geth-common"

[dependencies.geth-mikoshi]
path = "../geth-mikoshi"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies]
eyre = "0.6"
structopt = "0.3"
serde_json = "1"
