[package]
name = "geth-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.glyph]
git = "https://github.com/YoEight/glyph.git"
tag = "0.1.0"

[dependencies.geth-client]
path = "../geth-client"

[dependencies.geth-common]
path = "../geth-common"

[dependencies.geth-mikoshi]
path = "../geth-mikoshi"

[dependencies.geth-domain]
path = "../geth-domain"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.clap]
version = "4.3"
features = ["derive"]

[dependencies]
eyre = "0.6"
serde_json = "1"
serde = "1"
directories = "5"
chrono = "0.4"
bytes = "1.4.0"
